force-app/main/default/objects/Governance_Body_Member__c/Governance_Body_Member__c.object-meta.xml
<CustomObject>
    <label>Governance Body Member</label>
    <nameField>
        <label>Governance Body Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Governance Body Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>