force-app/main/default/objects/Governance_Body_Member__c/fields/Coordinating_Program__c.field-meta.xml
<CustomField>
    <fullName>Coordinating_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field denotes the coordinating program linked to the governance body member</description>
    <label>Coordinating Program</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Governance Body Members</relationshipLabel>
    <relationshipName>Governance_Body_Members</relationshipName>
    <type>Lookup</type>
</CustomField>