force-app/main/default/objects/Governance_Body_Member__c/fields/Tenure_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Start_Date__c</fullName>
    <label>Tenure Start Date</label>
    <type>Date</type>
</CustomField>