force-app/main/default/objects/Governance_Body_Member__c/fields/Type_Of_Body__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Body__c</fullName>
    <label>Type Of Body</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Board</fullName>
            </value>
            <value>
                <fullName>Advisory Council</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>